sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:4: error: not found: value n
  n = 2
  ^AlgCocktailSort2:7: error: not found: value n
    for (i <- 0 to getNombreValeurs() - n){
                                        ^AlgCocktailSort2:13: error: not found: value n
    for (i <- n to getNombreValeurs()){
              ^AlgCocktailSort2:19: error: not found: value n
    n = n +1
    ^